# python-sample-project

./: .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
