[tool.poetry]
name = "sample"
version = "0.1.0"
description = ""
authors = ["Kevin Pita <gitkevin@pm.me>"]
readme = "README.md"

[tool.isort]
profile = "black"

[tool.mypy]
strict = true

[tool.pylint.format]
max-line-length = "88"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
black = "^24.4.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
flake8-bugbear = "^24.4.21"
flake8-simplify = "^0.21.0"
flake8-comprehensions = "^3.14.0"
pylint = "^3.1.0"
mypy = "^1.9.0"
pre-commit = "^3.7.0"
poetry-types = "^0.5.0"

[tool.poetry.group.types.dependencies]
types-flake8-bugbear = "^24.4.21.20240423"
types-flake8-simplify = "^0.21.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
